feature: Add change password flow
