# auth-pern-stack/server/src/validators/auth-schema.ts
@@ -32,9 +32,18 @@ const resetPasswordSchema = z.object({
     .min(8, { message: "Password must be at least 8 characters long" }),
 });
 
+const changePasswordSchema = z.object({
+  oldPassword: z
+    .string()
+    .min(8, { message: "Password must be at least 8 characters long" }),
+  newPassword: z
+    .string()
+    .min(8, { message: "Password must be at least 8 characters long" }),
+});
 export {
   registerSchema,
   loginSchema,
   forgotPasswordSchema,
   resetPasswordSchema,
+  changePasswordSchema,
 };
